@@ -122,6 +122,9 @@ class Texture:
                          self.__data)
         
         return texture
+    
+    def setT(self, t):
+        self.__texture = t
 
     def bind(self):
         """Bind this texture to the current surface.
