@@ -3,6 +3,7 @@
 	* src/lib/scene/opengl/new_models.py: Use OpenGL vertex arrays to speed up initial
 	  rendering time ~6x. Reduces startup time in 3D mode from 5s to 2s on my system.
 	* src/lib/gtkui/chessview.py: Add translator comments (Bug #517320)
+	* src/lib/gtkui/network.py: Remove unused translation strings (Bug #517320)
 
 2008-02-16  Robert Ancell  <robert.ancell@gmail.com>
 
